[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/PixeloidSans-nR3g1.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Shop_Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/coin_display.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="ShopMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0.764706, 0.933333, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.5
margin_top = -73.0
margin_right = 125.5
margin_bottom = 73.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeButton1" type="Button" parent="ButtonContainer"]
margin_right = 251.0
margin_bottom = 46.0
theme = SubResource( 2 )
text = "Upgrade 1"

[node name="UpgradeButton2" type="Button" parent="ButtonContainer"]
margin_top = 50.0
margin_right = 251.0
margin_bottom = 96.0
theme = SubResource( 2 )
text = "Upgrade 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="ButtonContainer"]
margin_top = 100.0
margin_right = 251.0
margin_bottom = 146.0
theme = SubResource( 2 )
text = "Exit Shop"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="coin_display" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 53.72
margin_top = 30.8316
margin_right = 281.72
margin_bottom = 149.832
theme = SubResource( 4 )
text = "Coins:"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ButtonContainer/UpgradeButton1" to="." method="_on_UpgradeButton1_pressed"]
[connection signal="pressed" from="ButtonContainer/UpgradeButton2" to="." method="_on_UpgradeButton2_pressed"]
[connection signal="pressed" from="ButtonContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
